# bloom_filters

./: .gitignore  README.md  pyproject.toml
complete/: basic_bloom_filter.py  bloom_filter_base.py  checklist.MD  optimised_bloom_filter.py  test_bloom_filters.py
kata/: part1.py  part2.py  part3.py  test_kata.py  test_kata_performance.py
